# aria

./: .gitignore  IMPLEMENTACAO_REAL_SUMMARY.md  IMPLEMENTACAO_RESUMO.md  MANUAL_INJECAO_PERSONALIDADE.md  NOVAS_FERRAMENTAS_RESUMO.md  README.md  test_new_tools.py
agent/: FASE6_README.md  FASE7_README.md  FASE8_README.md  MOCK_AUDIT_REPORT.md  README_FASES_1-7.md  STATUS_FINAL.md  __init__.py  demo_end_to_end.py  demo_interface_unificada.py  demo_llm_integration.py  demo_real_vs_mock.py  main_vocal.py  pyproject.toml
agent/autonomy/: __init__.py  intrinsic.py
agent/cmd/agent-cli/: main.py
agent/config/: accounts.yaml  personality_config.yaml  providers.yaml  settings.yaml
agent/core/: __init__.py
agent/core/autonomy/: __init__.py  mode_manager.py  triggers.py
agent/core/cognition/: __init__.py  body_anchor.py  boredom.py  communication.py  critic.py  custom_profiles.py  drive.py  intention.py  interpretation.py  planner.py  reflection.py  thinking.py
agent/demos/: __init__.py  autonomous_demo.py  end_to_end_demo.py
agent/infra/tools/: web.py  (+10 more)
agent/interface/: README_UNIFIED.md  __init__.py  unified.py  voice.py
agent/learning/: __init__.py  constitution_evolver.py  meta_learning.py  online_learner.py  prompt_evolver.py  skill_acquisition.py
agent/memory/: long_term.py  manager.py  short_term.py
agent/safety/: IDENTITY_CORE_README.md  __init__.py  alignment.py  conscience.py  constitution.py  custom_constitution.yaml  identity_core.py
agent/tests/: test_integration.py
agent/ui/: dashboard.py
agent/vtuber/: README.md  __init__.py  png_engine.py
(+44 files in other folders)
